--- a/css/style.css
+++ b/css/style.css
@@ -28,21 +28,29 @@ body {
     height: 5em;
     left: 0;
     line-height: 5em;
-    width: 100%;
     position: absolute;
     top: 0;
+    width: 100%;
   }
 
   #header nav ul {
-    margin: 0;
     width: 100%;
   }
 
   #header nav ul li {
-    color: #e0c778;
-    font-size: 0.9em;
     display: inline-block;
+    font-size: 0.9em;
+    position: relative;
     text-align: center;
+  }
+
+  #header nav ul li a {
+    color: #e0c778;
+    display: block;
+    height: 3em;
+    line-height: 3em;
+    padding: 0 0.5em 0 0.5em;
+    text-decoration: none;
   }
 
   #header img {
