--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,13 @@
 /* Gold: #ba9648 */
 /* Charcoal: #262732 */
 
-body {
+/* body {
   width: 80%;
-}
+} */
 
-
-/* Nav Styling */
+/********************** 
+* Nav Styling 
+*/
   #header {
     background: #252624;
     box-shadow: 0 0 0.15em rgba(0, 0, 0, 0.1);
@@ -28,10 +29,10 @@ body {
     width: 100%;
   }
   
-
   #header section:last-of-type {
     display: none;
   }
+
   #header section:last-of-type nav {
     height: 5em;
     left: 0;
@@ -70,4 +71,27 @@ body {
     display: inline-block;
     vertical-align: center;
     width: 10em;
+  }
+
+
+/********************** 
+* Table Styling 
+*/
+  main {
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 20%;
+    width: 100%;
+  }
+
+  table {
+    background: #d5d3cd;
+    border: 2px solid #252624 ;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+
+  table thead {
+    background-color: #262732;
+    color: #e0c778;
   }
