--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,16 @@
     border-right: .1em solid #994726;
     border-bottom: .1em solid #ba9648;
   }
+
+  table tfoot {
+    text-align: center;
+  }
+
+  table tfoot tr th {
+    border-right: .1em solid #994726;
+  }
+
+  table tfoot tr td {
+    border-right: .1em solid #994726;
+    border-bottom: .1em solid #ba9648;
+  }
