--- a/css/style.css
+++ b/css/style.css
@@ -78,18 +78,24 @@
 * Table Styling 
 */
   main {
-    margin-left: 20%;
-    margin-right: 20%;
+    /* display: inline-block; */
+    /* margin-left: 20%; */
+    /* margin-right: 20%; */
     margin-top: 20%;
     width: 100%;
+  }
+
+  main section:first-of-type {
+    float: left;
   }
 
   table {
     background: #d5d3cd;
     border: 2px solid #252624 ;
-    margin-left: 20%;
-    margin-right: 20%;
+    /* margin-left: 20%;
+    margin-right: 20%; */
   }
+
 
   table thead {
     background-color: #262732;
@@ -130,4 +136,25 @@
 
   table tfoot tr td {
     border-right: .1em solid #994726;
+  }
+
+
+  main section:last-of-type {
+    float: right;
+  }
+
+  main section:last-of-type form {
+
+  }
+
+  main section:last-of-type form fieldset legend {
+    display: block;
+  }
+  
+  main section:last-of-type form fieldset label {
+    display: block;
+  }
+
+  main section:last-of-type form fieldset input {
+    display: inline;
   }
