--- a/css/salesStyle.css
+++ b/css/salesStyle.css
@@ -1,3 +1,15 @@
+/* Salmon Colors */
+/* Dark Green: #252624 */
+/* Dark Orange: #994726 */
+/* Mustard Yellow: #e0c778 */
+/* Light Gray: #d5d3cd */
+/* Gold: #ba9648 */
+/* Charcoal: #262732 */
+
+* {
+  box-sizing: border-box;
+}
+
 /********************** 
 * Table Styling 
 */
