--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url(./../img/cookiesheet.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 /********************** 
 * Nav Styling 
 */
@@ -73,4 +79,6 @@
     width: 10em;
   }
 
-
+/********************** 
+* Main Content Styling 
+*/
