Converted home page to spa-ish

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
   box-sizing: border-box;
 }
 
-body {
+#home {
   background-image: url(./../img/cookiesheet.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -19,7 +19,7 @@ body {
 /********************** 
 * Nav Styling 
 */
-  #header {
+  /* #header {
     background: #252624;
     box-shadow: 0 0 0.15em rgba(0, 0, 0, 0.1);
     height: 5em;
@@ -32,11 +32,16 @@ body {
   }
 
   #header section:first-of-type {
+    background-color: #262732;
+    border: 1px thick #994726;
     width: 100%;
+  }
+
+  #header section:first-of-type figure {
   }
   
   #header section:last-of-type {
-    display: none;
+   
   }
 
   #header section:last-of-type nav {
@@ -77,16 +82,84 @@ body {
     display: inline-block;
     vertical-align: center;
     width: 10em;
-  }
+  } */
+
+  /* Nav Styling */
+  #header {
+    background: rgba(0, 0, 0, 0.589);
+    box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
+    height: 3em;
+    left: 0;
+    line-height: 3em;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+}
+
+#header h1 {
+    cursor: default;
+    height: 3em;
+    left: 3em;
+    line-height: 3em;
+    position: absolute;
+    top: 0;
+}
+
+#header h1 a {
+    color: #F1E8B8;
+    font-family: 'Mrs Sheppards', cursive;
+    font-size: 2em;
+    text-decoration: none;
+}
+
+#header h1 a span:last-of-type {
+    color: #D05353;
+}
+
+#header nav {
+    height: 3em;
+    line-height: 3em;
+    position: absolute;
+    right: 3em;
+    top: 0;
+}
+
+#header nav ul {
+    margin: 0;
+}
+
+#header nav ul li {
+    display: inline-block;
+    font-size: 0.9em;
+    margin-left: 0.5em;
+    text-transform: lowercase;
+}
+
+#header nav ul li a {
+    color: #F1E8B8;
+    display: block;
+    font-family: 'Open Sans Condensed', sans-serif;
+    height: 3em;
+    line-height: 3em;
+    padding: 0 0.5em 0 0.5em;
+    outline: 0;
+    text-decoration: none;
+}
+
+#header nav ul li:hover {
+    background-color: black;
+    border-bottom: 2px solid #D05353;
+}
 
 /********************** 
 * Main Content Styling 
 */
-main {
+#home {
   position: relative;
 }
 
-main figure:first-of-type {
+#home  figure:first-of-type {
   left: 27em;
   position: absolute;
   top: 15em;
