--- a/css/style.css
+++ b/css/style.css
@@ -5,280 +5,222 @@
 /* Light Gray: #d5d3cd */
 /* Gold: #ba9648 */
 /* Charcoal: #262732 */
+@import url('https://fonts.googleapis.com/css?family=Germania+One|Mrs+Sheppards|Open+Sans+Condensed:300');
 
+/********************** 
+* Base Styling 
+*/
 * {
   box-sizing: border-box;
-}
-
-#home {
-  background-image: url(./../img/cookiesheet.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 /********************** 
 * Nav Styling 
 */
-  /* #header {
-    background: #252624;
-    box-shadow: 0 0 0.15em rgba(0, 0, 0, 0.1);
-    height: 5em;
-    left: 0;
-    line-height: 5em;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10000;
-  }
-
-  #header section:first-of-type {
-    background-color: #262732;
-    border: 1px thick #994726;
-    width: 100%;
-  }
-
-  #header section:first-of-type figure {
-  }
-  
-  #header section:last-of-type {
-   
-  }
-
-  #header section:last-of-type nav {
-    height: 5em;
-    left: 0;
-    line-height: 5em;
-    position: absolute;
-    top: 0;
-    width: 100%;
-  }
-
-  #header section:last-of-type nav ul:first-of-type {
-    float: left;
-    margin-left: 20%;
-  }
-  
-  #header section:last-of-type nav ul:last-of-type {
-    float: right;
-    margin-right: 20%;
-  }
-  
-  #header section:last-of-type nav ul li {
-    display: inline-block;
-    font-size: 0.9em;
-    text-align: center;
-  }
-  
-  #header section:last-of-type nav ul li a {
-    color: #e0c778;
-    display: block;
-    height: 3em;
-    line-height: 3em;
-    padding: 0 0.5em 0 0.5em;
-    text-decoration: none;
-  }
-
-  #header img {
-    display: inline-block;
-    vertical-align: center;
-    width: 10em;
-  } */
-
-
-@import url('https://fonts.googleapis.com/css?family=Germania+One|Mrs+Sheppards|Open+Sans+Condensed:300');
-
-/* Nav Styling */
     #header {
-        background: rgba(0, 0, 0, 0.589);
-        box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
-        height: 3em;
-        left: 0;
-        line-height: 3em;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        z-index: 10000;
+      background: rgba(0, 0, 0, 0.589);
+      box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
+      height: 6em;
+      left: 0;
+      line-height: 6em;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 10000;
     }
 
     #header figure img {
-      width: 20em;
+      width: 18em;
     }
 
     #header h1 {
-        cursor: default;
-        height: 3em;
-        left: 3em;
-        line-height: 3em;
-        position: absolute;
-        top: 0;
+      cursor: default;
+      height: 6em;
+      left: 3em;
+      line-height: 6em;
+      position: absolute;
+      top: 0;
     }
 
     #header h1 a {
-        color: #F1E8B8;
-        font-family: 'Mrs Sheppards', cursive;
-        font-size: 2em;
-        text-decoration: none;
+      color: #F1E8B8;
+      font-family: 'Mrs Sheppards', cursive;
+      font-size: 2em;
+      text-decoration: none;
     }
 
     #header h1 a span:last-of-type {
-        color: #D05353;
+      color: #D05353;
     }
 
     #header nav {
-        height: 3em;
-        line-height: 3em;
-        position: absolute;
-        right: 3em;
-        top: 0;
+      height: 6em;
+      line-height: 6em;
+      position: absolute;
+      right: 3em;
+      top: 0;
     }
 
     #header nav ul {
-        margin: 0;
+      margin: 0;
     }
 
     #header nav ul li {
-        display: inline-block;
-        font-size: 0.9em;
-        margin-left: 0.5em;
-        text-transform: lowercase;
+      display: inline-block;
+      font-size: 0.9em;
+      margin-left: 0.5em;
+      text-transform: lowercase;
     }
 
     #header nav ul li a {
-        color: #F1E8B8;
-        display: block;
-        font-family: 'Open Sans Condensed', sans-serif;
-        height: 3em;
-        line-height: 3em;
-        padding: 0 0.5em 0 0.5em;
-        outline: 0;
-        text-decoration: none;
+      color: #F1E8B8;
+      display: block;
+      font-family: 'Open Sans Condensed', sans-serif;
+      height: 6em;
+      line-height: 6em;
+      padding: 0 0.5em 0 0.5em;
+      outline: 0;
+      text-decoration: none;
     }
 
     #header nav ul li:hover {
-        background-color: black;
-        border-bottom: 2px solid #D05353;
+      background-color: black;
+      border-bottom: 2px solid #D05353;
     }
 
-/* Main Content Styling */
+/********************** 
+* Main Styling 
+*/
   #home, #about, #merchandise #contact{
-      background-color: #191919;
-      border-bottom: 1em solid black;
-      font-family: 'Open Sans Condensed', sans-serif;
-      height: 50em;
-      width: 100%;
+    background-color: #191919;
+    border-bottom: 1em solid black;
+    font-family: 'Open Sans Condensed', sans-serif;
+    height: 50em;
+    width: 100%;
   }
 
   #about h1, #merchandise h1, #contact h1 {
-      color: #F9E784; 
-      font-family: 'Germania One', cursive;
-      font-size: 30px;
-      font-size: 3vw;
-      padding-top: 3em;
-      text-align: center;
-      text-transform: lowercase;
-      width: 100%;
+    color: #F9E784; 
+    font-family: 'Germania One', cursive;
+    font-size: 30px;
+    font-size: 3vw;
+    padding-top: 3em;
+    text-align: center;
+    text-transform: lowercase;
+    width: 100%;
   }
 
-  /* Home Section */
+  /********************** 
+  * Home Section 
+  */
     #home {
-        color: #F9E784; 
+      background-image: url(./../img/cookiesheet.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     #home h1 {
-        font-size: 60px;
-        font-size: 6vw;
-        left: 2em;
-        position: absolute;
-        text-transform: lowercase;
-        top: 2em;
-        -webkit-text-stroke-color: black;
-        -webkit-text-stroke-width: 0.01em;
+      font-size: 60px;
+      font-size: 6vw;
+      left: 2em;
+      position: absolute;
+      text-transform: lowercase;
+      top: 2em;
+      -webkit-text-stroke-color: black;
+      -webkit-text-stroke-width: 0.01em;
     }
 
     #home h2 {
-        font-size: 30px;
-        font-size: 3vw;
-        left: 8em;
-        position: absolute;
-        text-transform: lowercase;
-        top: 10em;
-        -webkit-text-stroke-color: black;
-        -webkit-text-stroke-width: 0.02em;
+      font-size: 30px;
+      font-size: 3vw;
+      left: 8em;
+      position: absolute;
+      text-transform: lowercase;
+      top: 10em;
+      -webkit-text-stroke-color: black;
+      -webkit-text-stroke-width: 0.02em;
     }
 
     #home .firstLetter {
-        color: #E58F65;
+      color: #E58F65;
     }
 
     #home .myName {
-        color: #D05353;
-        font-family: 'Mrs Sheppards', cursive;
-        text-transform: uppercase;
+      color: #D05353;
+      font-family: 'Mrs Sheppards', cursive;
+      text-transform: uppercase;
     }
 
     #home .importantWord {
-        color: #D05353;
-        font-family: 'Germania One', cursive;
+      color: #D05353;
+      font-family: 'Germania One', cursive;
     }
 
     #home a {
-        background-color: #D05353;
-        border: .1em solid #E58F65;
-        border-radius: 2px;
-        color: #F9E784;
-        font-size: 2vw;
-        left: 20em;
-        padding: .25em;
-        position: absolute;
-        text-decoration: none;
-        text-transform: lowercase;
-        top: 22em;
+      background-color: #D05353;
+      border: .1em solid #E58F65;
+      border-radius: 2px;
+      color: #F9E784;
+      font-size: 2vw;
+      left: 20em;
+      padding: .25em;
+      position: absolute;
+      text-decoration: none;
+      text-transform: lowercase;
+      top: 22em;
     }
 
     #home a:hover {
-        background-color: #191919;
-        border-color: #D05353;
-        color: #E58F65;
+      background-color: #191919;
+      border-color: #D05353;
+      color: #E58F65;
     }
 
 
-    /* About Section */
-        #about article {
-            background-color: #E58F65;
-            height: 35em;
-            margin-left: 25%;
-            margin-right: 25%;
-            width: 50%;
-        }
-
-
-    /* Merchandise Section */
-        #merchandise article {
-            background-color: #E58F65;
-            height: 35em;
-            margin-left: 25%;
-            margin-right: 25%;
-            width: 50%;
-        }
-
-
-    /* Contact Section */
-        #contact article {
-            background-color: #E58F65;
-            height: 35em;
-            margin-left: 25%;
-            margin-right: 25%;
-            width: 50%;
-        }
-
-    /* Footer */
-      footer {
-          background: #F1E8B8;
-          height: 3em;
-          line-height: 3em;
-          text-align: center;
+  /********************** 
+  * About Section 
+  */
+      #about article {
+        background-color: #E58F65;
+        height: 35em;
+        margin-left: 25%;
+        margin-right: 25%;
+        width: 50%;
       }
 
-      footer ul li {
-          display: inline-block;
-      }
+
+  /********************** 
+  * Merchandise Section 
+  */
+    #merchandise article {
+      background-color: #E58F65;
+      height: 35em;
+      margin-left: 25%;
+      margin-right: 25%;
+      width: 50%;
+    }
+
+
+  /********************** 
+  * Contact Section 
+  */
+    #contact article {
+      background-color: #E58F65;
+      height: 35em;
+      margin-left: 25%;
+      margin-right: 25%;
+    }
+
+  /********************** 
+  * Footer Section 
+  */
+    footer {
+      background: #F1E8B8;
+      height: 3em;
+      line-height: 3em;
+      text-align: center;
+    }
+
+    footer ul li {
+      display: inline-block;
+    }
