--- a/css/style.css
+++ b/css/style.css
@@ -102,8 +102,8 @@
 * Main Styling 
 */
   #home, #about, #merchandise #contact{
-    background-color: #191919;
-    border-bottom: 1em solid black;
+    background-color: #252624;
+    border-bottom: 1em solid #994726;
     font-family: 'Open Sans Condensed', sans-serif;
     height: 50em;
     width: 100%;
@@ -193,9 +193,9 @@
       #about article {
         background-color: #E58F65;
         height: 35em;
-        margin-left: 25%;
-        margin-right: 25%;
-        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        width: 75%;
       }
 
 
@@ -228,6 +228,7 @@
       background: #F1E8B8;
       height: 3em;
       line-height: 3em;
+      margin-top: 3em;
       text-align: center;
     }
 
