--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@
 /********************** 
 * Main Styling 
 */
-  #home, #about, #merchandise #contact{
+  #home, #about, #merchandise, #contact{
     background-color: #252624;
     border-bottom: 1em solid #994726;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -190,14 +190,49 @@
   /********************** 
   * About Section 
   */
+      #about {
+        padding-top: 6em;
+      }
       #about article {
         background-color: #E58F65;
-        height: 35em;
+        height: 42em;
         margin-left: auto;
         margin-right: auto;
+        padding: 2em;
         width: 75%;
       }
 
+      #about figure {
+        width: 100%;
+      }
+
+      #about img {
+        float: left;
+        margin-right: 1em;
+        width: 75%;
+      }
+
+      #about p {
+        font-size: 1em;
+      }
+
+      #about table {
+        background: #AC5233;
+        border: 4px solid #282924;
+        margin-top: 30px;
+        text-align: center;
+        width: 100%;
+    }
+    
+    #about table tbody tr {
+        border-bottom: 1px solid #282924;
+    }
+    
+    #about table tbody tr th {
+        text-align: center;
+        padding-bottom: 15px;
+        padding-top: 15px;
+    }
 
   /********************** 
   * Merchandise Section 
@@ -205,9 +240,9 @@
     #merchandise article {
       background-color: #E58F65;
       height: 35em;
-      margin-left: 25%;
-      margin-right: 25%;
-      width: 50%;
+      margin-left: auto;
+      margin-right: auto;
+      width: 75%;
     }
 
 
@@ -217,8 +252,9 @@
     #contact article {
       background-color: #E58F65;
       height: 35em;
-      margin-left: 25%;
-      margin-right: 25%;
+      margin-left: auto;
+      margin-right: auto;
+      width: 75%;
     }
 
   /********************** 
@@ -228,8 +264,8 @@
       background: #F1E8B8;
       height: 3em;
       line-height: 3em;
-      margin-top: 3em;
       text-align: center;
+      width: 100%;
     }
 
     footer ul li {
