--- a/css/salesStyle.css
+++ b/css/salesStyle.css
@@ -6,8 +6,84 @@
 /* Gold: #ba9648 */
 /* Charcoal: #262732 */
 
-* {
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css?family=Germania+One|Mrs+Sheppards|Open+Sans+Condensed:300');
+
+/********************** 
+* Nav Styling 
+*/
+#header {
+  background: rgba(0, 0, 0, 0.589);
+  box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
+  height: 6em;
+  left: 0;
+  line-height: 6em;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10000;
+}
+
+#header figure {
+  margin-left: 10em;
+}
+
+#header figure img {
+  width: 18em;
+}
+
+#header h1 {
+  cursor: default;
+  height: 6em;
+  left: 12em;
+  line-height: 6em;
+  position: absolute;
+  top: 0;
+}
+
+#header h1 a {
+  color: #F1E8B8;
+  font-family: 'Mrs Sheppards', cursive;
+  font-size: 2em;
+  text-decoration: none;
+}
+
+#header h1 a span:last-of-type {
+  color: #D05353;
+}
+
+#header nav {
+  height: 6em;
+  line-height: 6em;
+  position: absolute;
+  right: 10em;
+  top: 0;
+}
+
+#header nav ul {
+  margin: 0;
+}
+
+#header nav ul li {
+  display: inline-block;
+  font-size: 0.9em;
+  margin-left: 0.5em;
+  text-transform: lowercase;
+}
+
+#header nav ul li a {
+  color: #F1E8B8;
+  display: block;
+  font-family: 'Open Sans Condensed', sans-serif;
+  height: 6em;
+  line-height: 6em;
+  padding: 0 0.5em 0 0.5em;
+  outline: 0;
+  text-decoration: none;
+}
+
+#header nav ul li:hover {
+  background-color: black;
+  border-bottom: 2px solid #D05353;
 }
 
 /********************** 
